kubenetes-files/02-deployment-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-v1
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
      version: v1
  template:
    metadata:
      labels:
        app: vproapp
        version: v1
    spec:
      containers:
      - name: vproapp-v1
        image: javapp.azurecr.io/javapp
        ports:
        - name: vproapp
          containerPort: 8080
