kubenetes-files/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
spec:
  ports:
  - port: 8080
    targetPort: vproapp
    protocol: TCP
  selector:
    app: vproapp
