kubenetes-files/07-destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vproapp-destination
spec:
  host: vproapp-svc
  subsets:
    - name: v1
      labels:
        # app: vproapp
        version: v1
    - name: v2
      labels:
        # app: vproapp
        version: v2
